# Research-AgenticRAG

./: .env.example  .gitignore  BLOG.md  DESIGN_DOC.md  HANDOFF_EVAL_WORKER.md  HANDOFF_LATEX.md  PAPER_DRAFT.md  README.md  RESEARCH_PLAN.md  pyproject.toml  requirements.txt
paper/: main.tex  references.bib
results/: README.md  RESULTS_SUMMARY.md  identifiability_claude_claude-haiku-4-5_hotpotqa_bm25_corruption.json  identifiability_claude_claude-haiku-4-5_musique_bm25_corruption.json  identifiability_openai_gpt-4o-mini_hotpotqa_bm25_corruption.json  identifiability_openai_gpt-4o-mini_musique_bm25_corruption.json  rescore_audit.json
scripts/: _env.py  plot_amplification.py  plot_identifiability.py  rescore_audit.py  run_ablation.py  run_all.sh  run_baseline.py  run_demo.py  run_identifiability.py  run_phase2.sh  run_strict_claude.sh  summarize_identifiability.py
src/agenticrag/: __init__.py  agents.py  core.py  corruption.py  data.py  datasets.py  diagnosers.py  evaluate.py  experiment.py  injection.py  propagation.py  retrievers.py
tests/: test_agents.py  test_core.py  test_corruption.py  test_data.py  test_datasets_extra.py  test_diagnosers.py  test_evaluate.py  test_experiment.py  test_identifiability_metrics.py  test_injection.py  test_live_injection.py  test_multihop.py  test_propagation.py  test_run_identifiability.py
